apps/linkwarden/service.yaml
# INTERNAL Service - accessible via ingress
# This service will be accessible via internal DNS using MetalLB IP + Ingress
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
    # DNS Management Labels for Internal Service
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "linkwarden.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP # Use ClusterIP for internal services with ingress
  ports:
    - name: http
      port: 80 # External port
      targetPort: 3000 # Linkwarden container port
      protocol: TCP
  selector:
    app: linkwarden
